scss/style.css
/* ... */
.our__solutions .content p:last-child {
  margin-bottom: 0;
}
.our__solutions .content__img {
  margin-bottom: 80px;
}
@media (max-width: 992px) {
  .our__solutions .content__img {
    text-align: center;
  }
}

.top__section {
  background: var(--dark-purple);
  background-size: cover;
  padding: 80px 0;
  position: relative;
  /* Add indicator arrow for the active tab */
}
.top__section::before {
  position: absolute;
  content: "";
  background-color: var(--white);
  height: 100%;
  width: 50%;
  top: 0;
  right: 0;
  left: auto;
}
@media (max-width: 992px) {
  .top__section::before {
    height: 45%;
    width: 100%;
    bottom: 0;
    top: unset;
  }
}
.top__section::after {
  position: absolute;
  font-family: "Font Awesome 5 Pro";
  content: "\f061";
  background-color: var(--light-green);
  border: 6px solid var(--white);
  height: 70px;
  width: 70px;
  border-radius: 50%;
  top: 25%;
  left: 49%;
  margin-left: -12px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  font-size: 24px;
}
@media (max-width: 992px) {
  .top__section::after {
    top: 53%;
    transform: rotate(90deg);
  }
}
@media (max-width: 768px) {
  .top__section::after {
    top: 41%;
  }
}
@media (max-width: 767px) {
  .top__section::after {
    top: 54%;
  }
}
.top__section .nav {
  width: 610px;
  top: auto;
  left: auto;
  display: flex;
  flex-direction: row !important;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  align-content: stretch;
  margin: 0px 0px 0px;
  position: unset;
}
.top__section .nav .card {
  background: transparent;
  border: transparent;
  margin-bottom: 40px;
}
.top__section .nav .card .card-footer p {
  font-size: 16px;
  text-align: center;
  color: var(--white);
  padding: 0;
  white-space: nowrap;
  width: 130px;
  overflow: hidden;
  text-overflow: ellipsis;
}
.top__section .tab-content {
  position: relative;
}
@media (max-width: 992px) {
  .top__section .tab-content .tab-pane {
    padding: 8rem 3rem 0 3rem !important;
  }
}
.top__section .tab-content .countered {
  font-size: 80px;
  font-weight: bold;
  color: var(--dark-purple);
}
.top__section .tab-content h4 {
  font-size: 40px;
  color: var(--dark-purple);
}
.top__section .tab-content p {
  font-size: 20px;
  padding: 0;
}
.top__section .tab-content .solutions--points {
  display: block;
  width: 100%;
}
.top__section .tab-content .solutions--points li {
  display: inline-block;
  padding: 5px 10px;
  border: 1px solid #cccccc;
  border-radius: 5px;
  margin: 0 10px 10px 0;
}
.top__section .main__box {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  gap: 20px;
  margin: 80px 0px 0px;
}
.top__section .nav-pills-custom .nav-link {
  color: var(--white);
  position: relative;
  padding: 0px 8px;
  width: 180px;
  height: 210px;
  margin-bottom: 20px;
}
.top__section .nav-pills-custom .nav-link.active {
  background-color: transparent;
}
.top__section .nav-pills-custom .nav-link.active::before {
  opacity: 1;
}

.solution__form {
  background: var(--dark-purple);
  background-size: cover;
  padding: 60px 0;
  position: relative;
  overflow: hidden;
}
.solution__form::before {
  position: absolute;
  content: "";
  background: url(../images/solution-contact.png) no-repeat;
  background-size: 100%;
  height: 100%;
  width: 100%;
  right: -100px;
}
.solution__form .content {
  margin-bottom: 60px;
}
.solution__form .content h2 {
  font-size: 33px;
  font-weight: 500;
  margin-bottom: 20px;
  position: relative;
  padding-left: 110px;
  letter-spacing: 5px;
}
.solution__form .content h2::before {
  content: "";
  position: absolute;
  width: 30px;
  height: 30px;
  background: url(../images/logowhitecircle.svg) no-repeat 0 0;
  left: 60px;
  top: 6px;
}
.solution__form .content h2::after {
  content: "";
  position: absolute;
  width: 50px;
  height: 4px;
  background: var(--light-green);
  left: 0;
  top: 19px;
}
.solution__form .content p {
  font-size: 20px;
  color: var(--white);
  padding-left: 110px;
  font-family: var(--poppins);
  width: 100%;
}
@media (max-width: 992px) {
  .solution__form .content p {
    padding-left: 0;
  }
}
.solution__form #form {
  position: relative;
  z-index: 1;
  padding-left: 110px;
}
@media (max-width: 992px) {
  .solution__form #form {
    padding-left: 0;
  }
}
.solution__form #form label {
  color: #fff;
  font-size: 18px;
  font-family: var(--poppins);
  margin-bottom: 10px;
}
.solution__form #form input {
  background: transparent;
  border: 1px solid rgba(255, 255, 255, 0.2901960784);
  margin-bottom: 30px;
  border-radius: 0;
  padding: 12px;
  color: var(--white);
}
.solution__form #form textarea {
  background: transparent;
  border: 1px solid rgba(255, 255, 255, 0.2901960784);
  margin-bottom: 30px;
  border-radius: 0;
}
.solution__form #form a {
  display: inline-block;
  text-align: center;
  padding: 0 20px;
  background: var(--light-green);
  color: var(--white);
  font-size: 18px;
  text-transform: uppercase;
  margin-top: 20px;
  transition: all 0.3s ease-in-out;
  font-family: var(--poppins);
  line-height: 50px;
  text-decoration: none;
}
.solution__form #form a svg {
  margin-left: 20px;
}
.solution__form #form a:hover {
  background: var(--white);
  color: var(--light-green);
}

@media screen and (max-width: 1440.99px) {
  .soluton__banner .content {
    left: 80px;
  }
}
@media screen and (max-width: 1366.99px) {
  .top__section .nav {
    width: 520px;
  }
  .soluton__banner .content {
    left: 110px;
  }
}
@media screen and (max-width: 1024.99px) {
  .top__section .nav {
    width: 450px;
  }
  .soluton__banner {
    height: 650px;
  }
  .soluton__banner .content {
    left: 40px;
  }
}
@media screen and (max-width: 992px) {
  .top__section .nav {
    width: 100%;
  }
}
/* ... */

